--- a/design/index.html
+++ b/design/index.html
@@ -31,24 +31,33 @@
   </header>
 
   <main>
-    <section class="textiles">
-      <div class="textiles-wrapper">
-          <img class="textile" src="../img/blackwhitecat2.png" alt="black and white textiles"/>
+    <section class="designs">
+      <div class="design-wrapper">
+          <img class="design" src="../img/des-tl.png" alt="black and white drawing"/>
       </div>
-      <div class="textiles-wrapper">
-          <img class="textile" src="../img/blackwhite2.png" alt="small textile art"/>
+      <div class="design-wrapper">
+          <img class="design" src="../img/des-tm.png" alt="black and white drawing"/>
       </div>
-      <div class="textiles-wrapper">
-          <img class="textile" src="../img/necklace2.png" alt="small textile art"/>
+      <div class="design-wrapper">
+          <img class="design" src="../img/des-tr.png" alt="black and white drawing"/>
       </div>
-      <div class="textiles-wrapper">
-          <img class="textile" src="../img/greyflowers2.png" alt="textile necklace"/>
+      <div class="design-wrapper">
+          <img class="design" src="../img/des-ml.png" alt="black and white drawing"/>
       </div>
-      <div class="textiles-wrapper">
-          <img class="textile" src="../img/largeflower2.png" alt="textile necklace"/>
+      <div class="design-wrapper">
+          <img class="design" src="../img/des-mm.png" alt="black and white drawing"/>
       </div>
-      <div class="textiles-wrapper">
-          <img class="textile" src="../img/trio2.png" alt="textile jewelry"/>
+      <div class="design-wrapper">
+          <img class="design" src="../img/des-mr.png" alt="black and white drawing"/>
+      </div>
+      <div class="design-wrapper">
+          <img class="design" src="../img/des-bl.png" alt="black and white drawing"/>
+      </div>
+      <div class="design-wrapper">
+          <img class="design" src="../img/des-bm.png" alt="black and white drawing"/>
+      </div>
+      <div class="design-wrapper">
+          <img class="design" src="../img/des-br.png" alt="black and white drawing"/>
       </div>
     </section>
   </main>
