--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
           <ul>
             <a href="index.html">gallery</a>
             <a href="textiles/index.html">textiles</a>
-            <a href="illustration/index.html">illustration</a>
+            <a href="design/index.html">design</a>
             <a href="about/index.html">about</a>
           </ul>
         </nav>
