--- a/about/index.html
+++ b/about/index.html
@@ -3,10 +3,12 @@
 
 <head>
     <meta charset="utf-8">
+    <title>elynnschenk</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -21,7 +23,7 @@
         <ul>
           <a href="../index.html">gallery</a>
           <a href="../textiles/index.html">textiles</a>
-          <a href="../illustration/index.html">illustration</a>
+          <a href="../design/index.html">design</a>
           <a href="../about/index.html">about</a>
         </ul>
       </nav>
